--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -922,8 +922,6 @@ span.form-code-val {
     table.scroll tr {
       display: flex;
       align-items: center; }
-      .helpdesk-table-view table.scroll tr {
-      padding: 10px; }
       table.scroll tr.week-end {
         border-bottom: 2px solid #cccdd2; }
       table.scroll tr.holiday-work td {
@@ -1303,8 +1301,8 @@ div#savedrequest, div#drafts {
     background-color: #fff; }
     .reimbursement-wrapper .header .title {
         font-size: 14px;
-		margin: 0;
-		line-height: normal;
+	margin: 0;
+	line-height: normal;
       color: #000000;
       font-family: Lato-Bold; }
   .reimbursement-wrapper .collapsible {
@@ -1319,7 +1317,7 @@ div#savedrequest, div#drafts {
     .reimbursement-wrapper .collapsible li .collapsible-header {
       padding: 20px 10px; 
       font-family: 'Lato-Regular';
-		line-height: 1.5;}
+	line-height: 1.5;}
       .reimbursement-wrapper .collapsible li .collapsible-header .expense-icon .fa-chevron-down {
         transition: All 0.3s; }
       .reimbursement-wrapper .collapsible li .collapsible-header.active {
@@ -1573,7 +1571,7 @@ div#savedrequest, div#drafts {
       color: #000;
       margin-left: 105px; }
 	.dashboard-data-container .card.emp-dashboard-data .emp-img h5{
-		margin-left: 0;
+	margin-left: 0;
 	}
     .dashboard-data-container .card.emp-dashboard-data h6 {
       font-family: Lato-Regular;
@@ -1815,10 +1813,10 @@ button, button:focus {
       @media only screen and (max-width: 600px) {
         .btn.custom-btn.cancel, .custom-btn.cancel.btn-large, .btn.custom-btn.submit, .custom-btn.submit.btn-large, .btn-large.custom-btn.cancel, .btn-large.custom-btn.submit {
           width: 60px; }
-		  .btn.custom-btn.save-as-draft, .back-btn, .back-btn:hover{
-			padding: 0 1rem;
-		  }
-		  }
+	  .btn.custom-btn.save-as-draft, .back-btn, .back-btn:hover{
+	padding: 0 1rem;
+	  }
+	  }
 
 .pos-relative {
   position: relative; }
@@ -2022,7 +2020,7 @@ button, button:focus {
     margin-right: -0.75rem; } }
 /* Main content */
 main {
-  padding-left: 25px; }
+  padding-left: 50px; }
   @media only screen and (max-width: 600px) {
     main {
       padding: 0; } }
@@ -2537,7 +2535,7 @@ footer.page-footer {
 
 @media only screen and (max-width: 992px) {
 	.scrollable-card-content table th, .scrollable-card-content table td {
-		width: 100% !important;
+	width: 100% !important;
 	}
 }
 .currency-symbol {
@@ -2710,22 +2708,22 @@ width: 60%;
 
 @media only screen and (max-width: 992px) {
 	.holiday-modal .modal-custom {
-		width: 80% !important;
+	width: 80% !important;
 	}
 	.main-data-container{
-		padding: 10px;
+	padding: 10px;
 	}
 }
 @media only screen and (max-width: 321px) {
 	.holiday-list-options {
-		display: flex;
-		flex-wrap: wrap;
+	display: flex;
+	flex-wrap: wrap;
 	}
 }
 @media only screen and (max-width: 992px) {
 	.approvals-data td .arrow-right-img {
-		display: inline-block;
-		transform: initial; 
+	display: inline-block;
+	transform: initial; 
 	} 
 }
 /* Reports */
@@ -2739,8 +2737,8 @@ width: 60%;
 }
 @media only screen and (max-width: 992px) {
 	.approvals-data td .arrow-right-img {
-		display: inline-block;
-		transform: initial; 
+	display: inline-block;
+	transform: initial; 
 	}
 }
 
@@ -3098,7 +3096,7 @@ word-break: break-all;}
 
 @media only screen and (min-width: 993px) {
 	.helpdesk-table-view table.scroll tbody {
-		max-height: 685px;
+	max-height: 685px;
 	}
 }
 
@@ -4002,6 +4000,7 @@ a {
 .side-nav{
  width: 240px;
 }
+
 nav .button-collapse{
  margin:0;
 }
@@ -4081,4 +4080,436 @@ margin: 0px!important;
   height:auto;
   overflow:auto; 
   max-height:600px;
+}
+.comments-scrollable{
+  height:330px;
+  overflow-y:auto;
+}
+/*Label*/
+h6.active-select{
+  font-size: 12px;
+    color: #888489;
+    margin-bottom: 0;
+    margin-top: 5px;
+}
+
+/*Appraisal-Appraiser-Module*/
+.appraisee-quest{
+    padding: 13px 30px;
+    font-size: 16px;
+    color: #000;
+    min-height: 50px;
+    text-align: left;
+    border-top-left-radius: 100px;
+    border-bottom-left-radius: 100px;
+  }
+.appraisee-quest.quest-1{
+   background: #fbb03b;
+}
+.appraisee-quest.quest-2{
+   background: #dbc970;
+}
+.appraisee-quest.quest-3{
+   background: #b29c7f;
+}
+.appraisee-quest.quest-4{
+   background: #c8b661;
+}
+.appraisee-quest.quest-5{
+   background: #7bb5c7;
+}
+.appraisee-quest.quest-6{
+   background: #a7c7b6;
+}
+.appraisee-quest.quest-7{
+   background: #63a29f;
+}
+
+.appraisee-quest p{
+  margin: 0;
+}
+.timeline-panel-appraiser{
+    width: 95%;
+    margin-left: 5%;
+    margin-top: -3px;
+}
+.left-bar-content{
+  margin-bottom: 40px;
+}
+.rating-panel{
+  border-left: 8px solid #76b1cd;
+  margin-top: 20px;
+  min-height: 220px;
+}
+.rating-panel.sub-rating-panel{
+  border-left: 6px solid #76b1cd;
+  margin-top: 50px;
+  min-height: 200px;
+}
+.overall-rating.appraiser-rate{
+  position: relative;
+  height: 30px;
+  background: #76b1cd;
+  width: 98%;
+  border-top-right-radius: 100px;
+  border-bottom-right-radius: 100px;
+}
+.overall-rating{
+  position: relative;
+  height: 30px;
+  background: #76b1cd;
+  width: 95%;
+}
+
+.overall-rate-circle{
+  position: absolute;
+  text-align: center;
+  color: #fff;
+  width: 90px;
+  height: 90px;
+  border-top-right-radius: 50%;
+  border-top-left-radius: 50%;
+  border-bottom-right-radius: 50%;
+  border-bottom-left-radius: 50%;
+  background: #76b1cd;
+  left: 40%;
+  top: -34px;
+  border: 5px solid #fff;
+  box-shadow: 0 2px 5px 0 rgba(4, 4, 4, 0.05), 0 2px 5px 0 rgba(0, 0, 0, 0.05);
+}
+.overall-rate-circle h5{
+  position: relative;
+  top: 15px;
+  font-size: 24px;
+}
+.parameter-1 h5, .parameter-2 h5{
+  display: inline-block;
+  font-size: 20px;
+  float: right;
+  padding: 0 40px;
+  color: #fff;
+}
+.overall-rate-circle .select-wrapper span.caret {
+    color: #fff;
+    position: absolute;
+    right: 8px;
+    top: 33px;
+    font-size: 10px;
+}
+.overall-rate-circle .select-wrapper input.select-dropdown {
+    position: relative;
+    cursor: pointer;
+    background-color: transparent;
+    border: none;
+    outline: none;
+    font-size: 2rem;
+    padding: 18px 30px;
+    display: block;
+}
+.overall-rate-circle .select-wrapper ul.dropdown-content{
+  max-height: 250px;
+  width: 50px;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  opacity: 1;
+  display: none;
+}
+  .select-wrapper.rating-input span.caret {
+    color: #fff;
+    position: absolute;
+    right: 20px;
+    top: 24px;
+    font-size: 10px;
+}
+ .select-wrapper.rating-input input.select-dropdown {
+    position: relative;
+    cursor: pointer;
+    background-color: transparent;
+    border: none;
+    outline: none;
+    float: right;
+    width: 24%;
+    border: none;
+    font-size: 22px;
+    color: #fff;
+    top: 8px;
+}
+.select-wrapper.rating-input.content-breadth input.select-dropdown {
+    position: relative;
+    cursor: pointer;
+    background-color: transparent;
+    border: none;
+    outline: none;
+    float: right;
+    width: 27%;
+    border: none;
+    font-size: 22px;
+    color: #fff;
+    top: 8px;
+}
+ .select-wrapper.rating-input ul.dropdown-content{
+  max-height: 250px;
+  width: 50px;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  opacity: 1;
+  display: none;
+}
+.parameter-1{
+  height: 60px;
+  background: #76b1cd;
+  margin-top: 40px;
+  border-top-right-radius: 100px;
+  border-bottom-right-radius: 100px;
+  border-right: 4px solid #FFF;
+}
+.parameter-heading{
+    margin: 0px 10px;
+    position: relative;
+    top: 15px;
+    font-size: 19px;
+    color: #fff;
+}
+.param-rating{
+  position: relative;
+  color:#fff;
+  float: right;
+  display: inline-block;
+  width:40%;
+}
+.param-rating-1{
+  position: relative;
+  color:#fff;
+  float: right;
+  display: inline-block;
+}
+.param-rating.param-rating-appraisee{
+  bottom: 22px;
+}
+.appraiser-rating-val{
+  float: right;
+    color: #fff;
+    position: relative;
+    top: 13px;
+    font-size: 22px;
+    right: 40px;
+}
+.overall-rate-appraiser{
+    position: relative;
+    top: 23px;
+    font-size: 26px;
+  }
+.rating-comment{
+  margin:20px;
+  z-index: 2;
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+.rating-content{
+  overflow-y: auto; 
+  margin: 20px 15px;
+  }
+.rating-content::-webkit-scrollbar {
+        width: 6px; }
+      .rating-content::-webkit-scrollbar-track {
+        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); }
+      .rating.content::-webkit-scrollbar-thumb {
+        background: rgba(153, 153, 153, 0.6);
+        outline: 1px solid #ccc;
+        border-radius: 5px; }
+
+/*Reviewer*/
+.small-quest{
+  font-size: 13px;
+}
+ .row .col.l3.right-bar.right-bar-reviewer {
+    z-index: 0;
+  }
+.rating-panel-reviewer {
+    border:none;
+    margin-top: 20px;
+    min-height: 220px;
+    margin-left: -30px;
+}
+.overall-rating.overall-reviewer{
+  position: relative;
+  height: 30px;
+  background: #e0784e;
+  width: 100%;
+  border-top-right-radius: 100px;
+  border-bottom-right-radius: 100px;
+}
+.overall-rate-circle.rate-circle-reviewer {
+    background: #e0784e;
+    left: 40%;
+}
+.parameter-1-1 {
+    height: 60px;
+    background: #e0784e;
+    margin-top: 40px;
+    border-top-right-radius: 100px;
+    border-bottom-right-radius: 100px;
+}
+
+.parameter-1-1 .param-rating.param-rating-appraisee {
+    bottom: 0;
+}
+.overall-rating.overall-average{
+  position: relative;
+  height: 30px;
+  background: #8da408;
+  border-top-right-radius: 100px;
+  border-bottom-right-radius: 100px;
+}
+.rating-panel-reviewer.average {
+    margin-left: 0px;
+}
+.hexagon {
+  position: relative;
+  width: 120px; 
+  height: 69.28px;
+  background-color: #8da408;
+  left: 29%;
+  top: -90px;
+  border-left: solid 5px #ffffff;
+  border-right: solid 5px #ffffff;
+  color: #fff;
+  text-align: center;
+  display: inline-block;
+}
+
+.hexagon:before,
+.hexagon:after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  width: 84.85px;
+  height: 84.85px;
+  -webkit-transform: scaleY(0.5774) rotate(-45deg);
+  -ms-transform: scaleY(0.5774) rotate(-45deg);
+  transform: scaleY(0.5774) rotate(-45deg);
+  background-color: inherit;
+  left: 12.5736px;
+}
+
+.hexagon:before {
+  top: -42.4264px;
+  border-top: solid 7.0711px #ffffff;
+  border-right: solid 7.0711px #ffffff;
+}
+
+.hexagon:after {
+  bottom: -42.4264px;
+  border-bottom: solid 7.0711px #ffffff;
+  border-left: solid 7.0711px #ffffff;
+}
+.select-wrapper.average-rating span.caret {
+    color: #fff;
+    position: absolute;
+    right: 15px;
+    top: 25px;
+    font-size: 14px;
+}
+.hexagon .select-wrapper input.select-dropdown {
+    position: relative;
+    cursor: pointer;
+    background-color: transparent;
+    border: none;
+    outline: none;
+    font-size: 2rem;
+    padding: 10px 45px;
+    display: block;
+    z-index: 3;
+}
+.overall-rate-hexagon{
+  position: relative;
+  top: 20px;
+  z-index: 2;
+  font-size: 1.5rem;
+}
+
+
+@media all and (max-width: 1450px) and (min-width: 1320px){
+  .note-help-icon {
+    left: 76%;
+    bottom: 91.3%;
+}
+  .employ-img-appraiser {
+    display: inline-block;
+    position: relative;
+    left: -8.5%;
+}
+  .employ-img {
+    display: inline-block;
+    position: relative;
+    left: -6.5%;
+  }
+  .small-quest{
+  font-size: 12px;
+  }
+  .timeline-panel-appraiser {
+    margin-top: -5px;
+  }
+}
+/*Idf Appraisal Rating*/
+.idf-appraiser-rating{
+  font-size: 14px;
+  font-family: 'Lato-Bold';
+}
+.comment-status-appraisal{
+  font-size: 16px;
+}
+.progress{
+  height: 8px!important;
+  border-radius: 5px!important;
+}
+.rate-circle-1{
+    position: relative;
+    text-align: center;
+    color: #fff;
+    width: 70px;
+    height: 70px;
+    border-top-right-radius: 50%;
+    border-top-left-radius: 50%;
+    border-bottom-right-radius: 50%;
+    border-bottom-left-radius: 50%;
+    background: #76b1cd;
+    left: 25%;
+    top: -6px;
+    border: 5px solid #fff;
+    box-shadow: 0 2px 5px 0 rgba(4, 4, 4, 0.05), 0 2px 5px 0 rgba(0, 0, 0, 0.05);
+}
+.rate-circle-2{
+    position: relative;
+    text-align: center;
+    color: #fff;
+    width: 70px;
+    height: 70px;
+    border-top-right-radius: 50%;
+    border-top-left-radius: 50%;
+    border-bottom-right-radius: 50%;
+    border-bottom-left-radius: 50%;
+    background: #8da408;
+    left: 25%;
+    top: -6px;
+    border: 5px solid #fff;
+    box-shadow: 0 2px 5px 0 rgba(4, 4, 4, 0.05), 0 2px 5px 0 rgba(0, 0, 0, 0.05);
+}
+.rate-circle-content{
+    position: absolute;
+    top: 17px;
+    right: 26px;
+    font-size: 18px;
+}
+
+.isGray{
+   border-color : gray !important;
+}
+
+.isRed{
+  border-color : red !important;
 }
